# rigel

./: Cargo.toml  README.md  ci.sh
.github/workflows/: ci.yml
apps/rigel_tui/: Cargo.toml  README.md
apps/rigel_tui/src/: app.rs  main.rs
apps/rigel_tui/src/events/: browse.rs  host_picker.rs  mod.rs
apps/rigel_tui/src/ui/: host_picker.rs  mod.rs  util.rs
apps/rigel_tui/src/ui/panes/: local_pane.rs  mod.rs  remote_pane.rs  shared.rs  status_line.rs  transfer_queue.rs
crates/rigel_client/: Cargo.toml  LICENSE
crates/rigel_client/src/: error.rs  hosts.rs  known_hosts.rs  lib.rs  session.rs  sftp.rs  ssh.rs  transfer.rs
