[workspace]
members = ["apps/*", "crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["cbrra (https://github.com/cbrra)"]
description = "Rigel SFTP libraries"
repository = "https://github.com/orionhosting/rigel"

[workspace.dependencies]
rigel_client = { path = "crates/rigel_client" }

russh = { version = "0.62.2", default-features = false, features = [
    "async-trait",
    "ring",
] }
russh-sftp = "2.0"
ssh-key = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
