[package]
name = "rigel_client"
license = "MIT"
description = "The Rigel SFTP client core crate"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
russh.workspace = true
russh-sftp.workspace = true
ssh-key.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
